# swagger-output.json
@@ -5,7 +5,7 @@
     "description": "Week7 CSE 341 - Rune Larsen",
     "version": "1.0.0"
   },
-  "host": "pharma7.onrender.com",
+  "host": "localhost:4000",
   "basePath": "/",
   "tags": [
     {
@@ -14,6 +14,7 @@
     }
   ],
   "schemes": [
+    "http",
     "https"
   ],
   "paths": {
@@ -36,9 +37,17 @@
         "tags": [
           "Meds"
         ],
-        "description": "Endpoint to create a Meds",
-        "produces": [
-          "application/json"
+        "description": "Endpoint to create a new medication",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Medication information",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Meds"
+            }
+          }
         ],
         "responses": {
           "201": {
@@ -130,7 +139,7 @@
                 "Insurance": {
                   "example": "any"
                 },
-                "Claim": {
+                "ClaimReference": {
                   "example": "any"
                 },
                 "Price": {
@@ -505,13 +514,27 @@
         "tags": [
           "Meds"
         ],
-        "description": "Endpoint to create a Meds",
-        "produces": [
-          "application/json"
+        "description": "Endpoint to create a new medication",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Medication information",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Meds"
+            }
+          }
         ],
         "responses": {
+          "201": {
+            "description": "Created"
+          },
           "412": {
             "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -593,7 +616,7 @@
                 "Insurance": {
                   "example": "any"
                 },
-                "Claim": {
+                "ClaimReference": {
                   "example": "any"
                 },
                 "Price": {
